# ai-chatbot

./: Dockerfile  README.md  api.py  db_setup.py  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-ghcr.yaml
tests/: test_api.py
widget/: index.html  widget.js
