[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
